<resources>
    <string name="app_name">ShopNTrips</string>
    <string name="enter_user_name">ENTER USER NAME</string>
    <string name="enter_user_pass">ENTER PASSWORD</string>
    <string name="remember_me">Remember Me</string>

    <string name="register_now">Register Now</string>
    <string name="need_to_signup">Need to signup ?</string>
    <string name="login">LOGIN</string>
    <string name="direct_user">Direct User</string>
    <string name="left_mp">Left MP</string>

    <string name="rep_binary_income">Rep.Binary Income</string>
    <string name="binary_roi_income">Binary ROI Income</string>
    <string name="direct_roi_income">Direct ROI Income</string>
    <string name="roi_income">ROI Income</string>

    <string name="_00_00">00.00</string>


    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="invalid_username_message">Empty or Invalid user name</string>
    <string name="invalid_password_message">Empty or Invalid Password</string>
    <string name="sponsor_information">Sponsor Information</string>
    <string name="sponsor_id">Sponsor ID</string>
    <string name="sponsor_name">Sponsor Name</string>
    <string name="pin_number">Pin Number</string>
    <string name="user_id">User ID</string>
    <string name="transaction_password">Transaction Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="position">Position</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="balance">E-Wallet BALANCE : </string>
    <string name="spinner_title">10</string>
    <string name="transition_string">hello</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="nominee_name">Nominee Name</string>z
    <string name="contact_information">Contact Information</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="postal_address">Postal Address</string>
    <string name="bank_information">Bank Information</string>
    <string name="account_number">Account Number</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch_name">Bank Branch Name</string>
    <string name="ifsc_code">Bank IFSC Code</string>
    <string name="pan_card_number">Pan Card Number</string>
    <string name="invalid_pan_card_number">Invalide Pan Card Number</string>
    <string name="accept_terms">I accept terms and conditions</string>
    <string name="reset_password">Reset Password</string>
    <string name="invalid_user_id">Empty or Invalid User Id</string>
    <string name="withdraw_history">Withdraw Confirmed</string>
    <string name="status_paid">Status : Paid</string>
    <string name="status_unpaid">Status : Unpaid</string>
    <string name="payout_no">Sr. No</string>
    <string name="amount">Enter Amount</string>
    <string name="date">Date</string>


    <string name="status">Status</string>
    <string name="bank_details">Bank Details</string>
    <string name="tds">TDS</string>
    <string name="admin_charges">Admin Charges</string>
    <string name="net_amount">Net Amount</string>
    <string name="match_pair">Match Pair</string>
    <string name="left_bv">Left PV</string>
    <string name="right_bv">Right BV</string>
    <string name="laps_bv">Laps BV</string>
    <string name="security">Security</string>
    <string name="info">Info</string>
    <string name="nominee_relation">Nominee Relation</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="product_name">Product Name</string>
    <string name="epin">E-Pin</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_passsword">Re-Type Password</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="direct_users">Direct Users</string>
    <string name="shopping_wallet">Shopping Wallet</string>
    <string name="detail"><u>Details</u></string>
    <string name="repurchase_binary_income">Repurchase Binary Income</string>
    <string name="binary_income">Binary Income</string>
    <string name="club_income">Club Income</string>
    <string name="level_income">Level Income</string>
    <string name="direct_income">Direct Income</string>
    <string name="total_income">Total Income</string>
    <string name="total_withdrawal">Total Withdrawal</string>
    <string name="no_internet_connection_message">Please check internet connection</string>
    <string name="something_went_wrong">Something went wrong or no internet connection...Please try again!</string>
    <string name="holder_name">Holder Name</string>
    <string name="empty_password">Empty or invalid old password</string>
    <string name="empty_transaction_password">Empty or invalid transaction password</string>
    <string name="invalid_new_password_message">Password should contain one lower case, one upper case character, one number and one special character</string>
    <string name="invalid_confirm_password_message">Password and Confirm Password must be same</string>
    <string name="empty_ifsc_code">Empty or invalid IFSC code</string>
    <string name="empty_pancard_code">Empty or Invalid Pancard No</string>
    <string name="empty_branch_name">Empty or Invalid branch name</string>
    <string name="empty_bank_name">Empty or invalid bank name</string>
    <string name="empty_account_name">Empty or invallid account holder name</string>
    <string name="empty_account_number">Empty or invalid account number</string>
    <string name="invalid_email_message">Empty or invalid email id</string>
    <string name="select_relation_message">Please select nominee relation</string>
    <string name="invalid_nominee_name">Empty or invalid Nominee Name</string>
    <string name="invalid_mobile_number_message">Empty or invalid mobile number</string>
    <string name="invalid_full_name_message">Empty or invalid full name</string>
    <string name="submit">Submit</string>
    <string name="user_available">User Available</string>
    <string name="user_not_available">User Not Available</string>
    <string name="empty_sponsor_id">Empty or invalid sponsor Id</string>
    <string name="empty_pin">Empty or invalid piin number</string>
    <string name="select_position">Please select position</string>
    <string name="profile">Profile</string>
    <string name="security_password">Security Password</string>
    <string name="from_user_id">From User Id</string>
    <string name="dont_have_account">Don\'t have an account? REGISTER HERE</string>
    <string name="sign_up">Sign Up</string>
    <string name="empty_user_id">Empty or invalid user id</string>
    <string name="left_id">Left Id</string>
    <string name="right_id">Right Id</string>
    <string name="left_business">Left Business</string>
    <string name="right_business">Right Business</string>
    <string name="carry_right_business">Carry Right Business</string>
    <string name="carry_left_business">Carry Left Business</string>
    <string name="repurchase_left_bv">Repurchase Left BV</string>
    <string name="repurchase_right_bv">Repurchase Right BV</string>
    <string name="used_date">Used Date</string>
    <string name="deposit_id">Deposit Id</string>
    <string name="roi_amount">ROI Amount</string>
    <string name="package_name">Package Name</string>
    <string name="register">Register</string>

    <string name="pin_count">E-Pin Count</string>
    <string name="used_by">Used By</string>
    <string name="ticket_no">Ticket No</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="department">Department</string>
    <string name="select_image">Select Image</string>
    <string name="upload_slip">Upload Slip</string>
    <string name="search">Search</string>
    <string name="upline_id">Upline Id</string>
    <string name="withdraw">Withdraw</string>
    <string name="wallet_income">Wallet Income</string>
    <string name="wallet_withdrawn">Wallet Withdrawn</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="select_withdraw_mode">Select Withdraw Mode</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="transfer_to_ewallet">Transfer to E-Wallet</string>
    <string name="no_of_epins">No of E-Pins</string>
    <string name="product">Product</string>
    <string name="available_balance">Available Balance</string>
    <string name="e_balance">Available E Wallet Balance</string>
    <string name="to_user_id">To User Id</string>
    <string name="e_pin_count">E-Pin Count</string>
    <string name="e_pin">E-Pin</string>
    <string name="mode">Payment Mode</string>
    <string name="pin">Pin</string>
    <string name="withdraw_pending">Withdraw Pending</string>
    <string name="amount_deposited">Amount Deposited</string>
    <string name="req_qty">Req Quantity</string>
    <string name="type">Type*</string>
    <string name="cheque_no">Cheque No.</string>
    <string name="receipt_no">Receipt No.</string>
    <string name="ref_no">Ref No.</string>
    <string name="description">Description</string>
    <string name="total">Total</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="qty">QTY</string>
    <string name="add_products_to_cart">Add Products to Cart</string>
    <string name="add">Add</string>
    <string name="buy_now">Buy Now</string>
    <string name="added_products">Added Products</string>
    <string name="make_payment">Make Payment</string>
    <string name="select_team">Select Team</string>
    <string name="select_product">Select Product</string>
    <string name="select_operator">Select Operator</string>
    <string name="select_type">Select Type</string>
    <string name="user_cart">Your Cart</string>
    <string name="product_cost">Product Cost</string>
    <string name="address">Address</string>
    <string name="tab_1">Home</string>
    <string name="tab_2">Profile</string>
    <string name="tab_3">Support</string>
    <string name="tab_4">Bussiness Plan</string>
    <string name="title_activity_recharge_report_adapter">RechargeReportAdapter</string>
</resources>
