<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".views.LoginActivity">

    <RelativeLayout
        android:id="@+id/loader_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/blackTransparent"
        android:visibility="gone">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@drawable/loader" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center_horizontal"
            android:text="LOGIN"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/mEditUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_edittext"
                android:drawableEnd="@drawable/username"
                android:drawablePadding="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:hint="@string/enter_user_name"
                android:padding="8dp"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />


            <EditText
                android:id="@+id/mEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawableEnd="@drawable/username"
                android:drawablePadding="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:hint="@string/enter_user_pass"
                android:padding="8dp"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="textPassword"
                tools:ignore="RtlCompat,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            android:weightSum="2.2">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/remember_me"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/mTextForgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:id="@+id/mButtonLogin"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/btn_RegisterNow"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/register_now"
                android:textAllCaps="true"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:gravity="end"
            android:text="@string/need_to_signup"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>